--- a/makefile_intel
+++ b/makefile_intel
@@ -6,10 +6,9 @@ EVALLIB = ./UTILS/evalresp/lib
 
 CFLAGS =
 
-# new version with default sac libraries
 TAULIBDIR=$(PWD)/ttimes_mod
 #SACLIBDIR = $(PWD)/UTILS/lib
-SACLIBDIR = $(SACHOME)/lib
+SACLIBDIR = /home/jas11/sac-101.6a/build/src
 LIBS = -lsacio -lsac -lm -ltau -levresp -lasdf
 #LIB = -L/opt/seismo/lib -lDRWFiles -lf90recipes -lDSacio -lDSacLib -lSacTools -lm
 
@@ -29,11 +28,11 @@ ASDFINCDIR=$(ASDFHOME)/include
 #compiler option
 #OPT = -I${SHARED}
 #OPT = -std03
-FC = ftn
-CC = cc
-MPIFC = ftn
-MPICC = cc
-CFLAGS= -g
+FC = ifort
+CC = icc
+MPIFC = mpif90
+MPICC = mpicc
+CFLAGS= -g -O3
 
 _OBJ = main_subs.o main.o 
 
@@ -44,10 +43,10 @@ PROG = WORKFLOW
 default: MK_OBJDIR ${PROG}
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.f90
-	  $(MPIFC) ${CFLAGS} -c -o $@ $< -J $(OBJDIR) -I$(ASDFINCDIR)
+	  $(MPIFC) ${CFLAGS} -c -o $@ $< -module $(OBJDIR) $(ADIOS_INC) -I$(ASDFINCDIR)
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.f
-	  $(MPIFC) ${CFLAGS} -c -o $@ $< -J $(OBJDIR) -I$(ASDFINCDIR)
+	  $(MPIFC) ${CFLAGS} -c -o $@ $< -module $(OBJDIR) $(ADIOS_INC) -I$(ASDFINCDIR)
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
 	  $(MPICC) -c -o $@ $< 
